Port CityWorld to MinecraftForge 1.20.1 — self-test PASS, 131 checks
The 1.20.1 Forge line asked for on CurseForge. Cut from mc1.21.1, built with
ModDevGradle's legacyforge plugin, Java 17. Compile went 239 -> 0 errors; the
self-test then took four rounds to go green, and every failure was a loader
convention rather than a worldgen fault.

Plan hashes are identical to all five other versions (MODERN 886d202b,
APOCALYPSE f5916d4e, CLASSIC db5a2698), so a seed builds the same city here as
everywhere else.

What the loader change actually cost, each one measured from the failure:

- pack.mcmeta. Forge's ResourcePackLoader.createPackForMod builds a bare
  PathPackResources and injects no metadata, so without this file Minecraft
  DISCARDS the whole datapack: "Missing metadata in pack mod:cityworld". Every
  tag empty, no cityworld:city preset, no dimension — 21 failures from one
  missing file. NeoForge synthesises it, which is why no other branch has one.
- The mod constructor takes no arguments; FML does not inject the bus and
  container. FMLJavaModLoadingContext / ModLoadingContext supply them instead.
- mods.toml dependencies use mandatory=true/false, not type="required".
- Access transformers are SRG-named on this line (f_276598_, not frontText),
  derived from MDG's own intermediateToNamed.srg. validateAccessTransformers
  is on so a wrong target fails the build instead of silently not applying.
- Codec dispatch compares by identity: MapCodec.codec() returns a NEW wrapper
  each call, so codec() must hand back the same instance that was registered or
  encoding a dimension fails with "Unknown registry element".
- trial_chambers is 1.21+, and one unknown REQUIRED tag entry discards the whole
  tag — which silently removed strongholds, and with them the End portal.
- Forge has no c: common tags (371 forge: tags, zero c:), so the concrete,
  concrete_powder and glazed_terracotta pools list their blocks explicitly.
- Networking is SimpleChannel; data maps do not exis